[package]
name = "rival650-battery-tray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = { version = "2.6.1", features = ["windows-native"] }
image = "0.25.1"
include_dir = "0.7.3"
tray-icon = "0.13.4"
